--- a/index.html
+++ b/index.html
@@ -461,21 +461,30 @@
 
         .wheel-segment {
             position: absolute;
-            width: 50%;
-            height: 50%;
-            transform-origin: bottom right;
-            transform: rotate(calc(45deg * var(--i)));
-            clip-path: polygon(0 0, 60% 0, 100% 100%, 0 60%);
+            width: 100%;
+            height: 100%;
+            /* A wedge from the center to the right side of the circle */
+            clip-path: polygon(
+                50% 50%,  /* center */
+                100% 0%,  /* top right edge */
+                100% 100% /* bottom right edge */
+            );
+            transform-origin: 50% 50%;
+            transform: rotate(calc(var(--i) * 72deg)); /* 360 / 5 = 72deg per slice */
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
+        /* Label inside each slice */
         .wheel-segment span {
-            position: relative;
-            transform: rotate(45deg);
+            position: absolute;
+        /*     top: 50%;
+            left: 75%;
+            transform: translate(-50%, -50%) rotate(calc(-72deg * var(--i))); */ 
+            text-align: center;
             color: #fff;
-            font-size: 2em;
+            font-size: 1.8rem;
             font-weight: 700;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
@@ -665,14 +674,11 @@
                 <div class="wheel-wrapper">
                     <div class="spin-button" id="spinBtn2">SPIN</div>
                     <div class="wheel" id="wheelElement2">
-                        <div class="wheel-segment" style="--i:1; background:#d73f09;"><span>1</span></div>
-                        <div class="wheel-segment" style="--i:2; background:#4A773C;"><span>2</span></div>
-                        <div class="wheel-segment" style="--i:3; background:#003B5C;"><span>3</span></div>
-                        <div class="wheel-segment" style="--i:4; background:#f7a162;"><span>4</span></div>
-                        <div class="wheel-segment" style="--i:5; background:#d73f09;"><span>5</span></div>
-                        <div class="wheel-segment" style="--i:6; background:#0D5257;"><span>6</span></div>
-                        <div class="wheel-segment" style="--i:7; background:#D3832B;"><span>7</span></div>
-                        <div class="wheel-segment" style="--i:8; background:#4A773C;"><span>8</span></div>
+                        <div class="wheel-segment" style="--i:0; background:#d73f09;"><span>Beach Ball</span></div>
+                        <div class="wheel-segment" style="--i:1; background:#003B5C;"><span>Giant Highlighter</span></div>
+                        <div class="wheel-segment" style="--i:2; background:#4A773C;"><span>Calendar</span></div>
+                        <div class="wheel-segment" style="--i:3; background:#f7a162;"><span>Stickers</span></div>
+                        <div class="wheel-segment" style="--i:4; background:#0D5257;"><span>Magnet</span></div>
                     </div>
                 </div>
             </div>
@@ -699,22 +705,13 @@
         let round = 1;
 
         const round1Questions = [
-            { label: "What is your name?", placeholder: "Enter your name" },
-            { label: "Organization", options:[
-                "Oz",
-                "Kansas",
-                "Zootopia",
-                "The Leaf Village",
-                "Narnia",
-                "Hogwarts",
-                "Neverland",
-                "Atlantis",
-                "Wakanda",
-                "Asgard"
-            ] }
-        ];
-
-        const round2Questions = [
+            { label: "Which of the following best describes your role?", options:[
+                "Faculty",
+                "Undergraduate",
+                "Graduate",
+                "Government Office",
+                "Other"
+            ] },
             {
                 label: "Did your experience at this booth improve your impression of Oregon State University?",
                 options: [
@@ -723,6 +720,24 @@
                     "Yes, much improved"
                 ]
             }
+        ];
+
+        const round2Questions = [
+            {
+                label: "What brought you to the booth?",
+                options: [
+                    "Interesting research",
+                    "Swag"
+                ]
+            },
+            {
+                label: "Would you be willing to share your experience in more detail?",
+                options: [
+                    "Yes",
+                    "No"
+                ]
+            },
+
         ];
 
         let questions = round1Questions;
@@ -1008,12 +1023,14 @@
             wheel2.style.transform = `rotate(${rotation2}deg)`;
 
             setTimeout(() => {
-                const normalized = rotation2 % 360;
-                const angle = (360 - normalized + 22.5) % 360;
-                const segment = Math.floor(angle / 45);
+const normalized = rotation2 % 360;
+const angle = (360 - normalized + 36) % 360; // 36 = half of 72°
+const segment = Math.floor(angle / 72);      // 72° per slice
+const prizeIndex = segment % 5;              // 0–4
 
-                const prize = segment + 1; // 1–8
-                showPrizeModal(prize);
+const prizes = ["Beach Ball", "Giant Highlighter", "Calendar", "Stickers", "Magnet"];
+showPrizeModal(prizes[prizeIndex]);
+
 
                 isSpinning2 = false;
                 spinBtn2.classList.remove("spinning");
