--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
             color: #33333359;
             margin-top: 2rem;
             cursor: pointer;
+            font-family: "TikTok Sans", sans-serif;
         }
     </style>
 </head>
