--- a/index.html
+++ b/index.html
@@ -461,30 +461,21 @@
 
         .wheel-segment {
             position: absolute;
-            width: 100%;
-            height: 100%;
-            /* A wedge from the center to the right side of the circle */
-            clip-path: polygon(
-                50% 50%,  /* center */
-                100% 0%,  /* top right edge */
-                100% 100% /* bottom right edge */
-            );
-            transform-origin: 50% 50%;
-            transform: rotate(calc(var(--i) * 72deg)); /* 360 / 5 = 72deg per slice */
+            width: 50%;
+            height: 50%;
+            transform-origin: bottom right;
+            transform: rotate(calc(45deg * var(--i)));
+            clip-path: polygon(0 0, 60% 0, 100% 100%, 0 60%);
             display: flex;
             justify-content: center;
             align-items: center;
         }
-
-        /* Label inside each slice */
+ 
         .wheel-segment span {
-            position: absolute;
-        /*     top: 50%;
-            left: 75%;
-            transform: translate(-50%, -50%) rotate(calc(-72deg * var(--i))); */ 
-            text-align: center;
+            position: relative;
+            transform: rotate(45deg);
             color: #fff;
-            font-size: 1.8rem;
+            font-size: 2.5em;
             font-weight: 700;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
@@ -684,11 +675,14 @@
                 <div class="wheel-wrapper">
                     <div class="spin-button" id="spinBtn2">SPIN</div>
                     <div class="wheel" id="wheelElement2">
-                        <div class="wheel-segment" style="--i:0; background:#d73f09;"><span>Beach Ball</span></div>
-                        <div class="wheel-segment" style="--i:1; background:#003B5C;"><span>Giant Highlighter</span></div>
-                        <div class="wheel-segment" style="--i:2; background:#4A773C;"><span>Calendar</span></div>
-                        <div class="wheel-segment" style="--i:3; background:#f7a162;"><span>Stickers</span></div>
-                        <div class="wheel-segment" style="--i:4; background:#0D5257;"><span>Magnet</span></div>
+                        <div class="wheel-segment" style="--i:1; background:#d73f09;"><span>1</span></div>
+                        <div class="wheel-segment" style="--i:2; background:#4A773C;"><span>2</span></div>
+                        <div class="wheel-segment" style="--i:3; background:#003B5C;"><span>3</span></div>
+                        <div class="wheel-segment" style="--i:4; background:#f7a162;"><span>4</span></div>
+                        <div class="wheel-segment" style="--i:5; background:#d73f09;"><span>5</span></div>
+                        <div class="wheel-segment" style="--i:6; background:#0D5257;"><span>6</span></div>
+                        <div class="wheel-segment" style="--i:7; background:#D3832B;"><span>7</span></div>
+                        <div class="wheel-segment" style="--i:8; background:#4A773C;"><span>8</span></div>
                     </div>
                 </div>
             </div>
