--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                     Thanks for visiting the Oregon State University booth.
                     Tap below to continue to Round 2 and spin for more fun.
                 </p>
-                <button class="button button-secondary" id="goToRound2">
+                <button class="button" id="goToRound2">
                     <div class="wrap">
                         <p>Continue to Round 2</p>
                     </div>
