--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
             cursor: pointer;
             transition: all 0.2s ease;
             text-align: left;
+            min-width: 100px;
+            justify-content: center;
         }
 
         .radio-option input[type="radio"] {
@@ -352,7 +354,7 @@
         }
 
         .win-title {
-            font-size: 3.2rem;
+            font-size: 4rem;
             font-weight: 800;
             letter-spacing: 0.12em;
             text-transform: uppercase;
@@ -571,14 +573,14 @@
                 max-width: 100%;
             }
 
-            h2.main-title {
+         /*   h2.main-title {
                 font-size: 2.2rem;
                 left: 40px;
             }
 
             .win-title {
                 font-size: 2.4rem;
-            }
+            }*/
         }
 
         /* Radio Glow */
@@ -622,6 +624,47 @@
             cursor: pointer;
             font-family: "TikTok Sans", sans-serif;
         }
+
+        .arrow-btn {
+            position: absolute;
+            right: 84px;
+            margin-top: 7px;
+            padding: 7px 10px;
+            background: var(--orange);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            font-size: 1.25rem;
+            cursor: pointer;
+            box-shadow: var(--shadow-soft);
+            transition: 0.2s;
+        }
+
+        .arrow-btn:hover {
+            background: #ff8a00;
+            transform: scale(1.05);
+        }
+
+.transition-wrapper {
+    transition: transform 0.35s ease, opacity 0.35s ease;
+    transform-origin: center center;
+}
+
+.shrink-out {
+    transform: scale(0.85);
+    opacity: 0;
+}
+
+.grow-in {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.pre-grow {
+    transform: scale(0.85);
+    opacity: 0;
+}
+
     </style>
 </head>
 <body>
@@ -637,25 +680,34 @@
         <div class="form-inner">
 
             <!-- Question form (Round 1 + Round 2) -->
-            <form id="questionForm">
+            <div id="transitionWrapper" class="transition-wrapper">
+                <form id="questionForm">
+                    <div class="question-label" id="questionLabel"></div>
+                    <div id="radioContainer" class="radio-group hide"></div>
+                    <div id="emailField" class="hide" style="margin-top: 20px;">
+                        <div class="glow-wrap">
+                            <input type="email" id="emailInput" placeholder="Enter your email">
+                        </div>
 
-                <div class="question-label" id="questionLabel"></div>
-                <div id="radioContainer" class="radio-group hide"></div>
-
-                <fieldset class="text-box">
-                    <div class="glow-wrap" id="glowWrap">
-                        <input type="text" id="questionInput" placeholder="Name">
+                        <button id="emailSubmitBtn" type="button" class="arrow-btn">
+                            ➜
+                        </button>
                     </div>
-                </fieldset>
 
-                <button class="button" id="submitButton" type="submit">
-                    <div class="wrap">
-                        <p>Submit</p>
-                    </div>
-                </button>
-                 <button type="button"id="backButton">&#8617; Back to previous question</button>
-            </form>
+                    <fieldset class="text-box">
+                        <div class="glow-wrap" id="glowWrap">
+                            <input type="text" id="questionInput" placeholder="Name">
+                        </div>
+                    </fieldset>
 
+                    <button class="button" id="submitButton" type="submit">
+                        <div class="wrap">
+                            <p>Submit</p>
+                        </div>
+                    </button>
+                    <button type="button"id="backButton">&#8617; Back to previous question</button>
+                </form>
+            </div>
             <!-- YOU WIN state (after Round 1) -->
             <div id="youWin">
                 <div class="win-title">YOU WIN!</div>
@@ -707,6 +759,7 @@
            QUESTION / ROUND LOGIC
         --------------------------------*/
         let round = 1;
+        let isTransitioning = false;
 
         const round1Questions = [
             { label: "Which of the following best describes your role?", options:[
@@ -736,18 +789,15 @@
             },
             {
                 label: "Would you be willing to share your experience in more detail?",
-                options: [
-                    "Yes",
-                    "No"
-                ]
+                options: ["Yes", "No"],
+                isEmailConditional: true
             },
-
         ];
 
         let questions = round1Questions;
         let qIndex = 0;
 
-        const answers = { name: "", org: "", experience: "" };
+        const answers = { role: "", experience: "", brought: "", email: "" };
         let lastPrize = 0;
 
         const questionLabel = document.getElementById("questionLabel");
@@ -761,8 +811,38 @@
         let history = [];
         const backButton = document.getElementById("backButton");
 
+        const transitionWrapper = document.getElementById("transitionWrapper");
+
+        function animateOut(callback) {
+            isTransitioning = true;
+
+            transitionWrapper.classList.add("shrink-out");
+
+            setTimeout(() => {
+                if (callback) callback();
+
+                transitionWrapper.classList.remove("shrink-out");
+
+                transitionWrapper.classList.add("pre-grow");
+                requestAnimationFrame(() => {
+                    transitionWrapper.classList.remove("pre-grow");
+                    isTransitioning = false;   // 🔥 unlock AFTER next screen renders
+                });
+            }, 300);
+        }
+
+
+        function animateIn() {
+            transitionWrapper.classList.add("pre-grow");
+
+            requestAnimationFrame(() => {
+                transitionWrapper.classList.remove("pre-grow");
+            });
+        }
 
         function loadQuestion() {
+            animateIn();
+
             const q = questions[qIndex];
             questionLabel.textContent = q.label;
 
@@ -789,6 +869,7 @@
                 `;
 
                 label.addEventListener("click", () => {
+                    if (isTransitioning) return;
                     radioContainer.querySelectorAll(".radio-option").forEach(l => {
                         l.classList.remove("selected");
                         l.parentElement.classList.remove("glow-active");
@@ -802,11 +883,32 @@
 
                     const input = label.querySelector("input[type='radio']");
                     input.checked = true;
+                    // CONDITIONAL EMAIL LOGIC
+                    if (q.isEmailConditional) {
+                        if (input.value === "Yes") {
+                            // Show email field
+                            document.getElementById("emailField").classList.remove("hide");
+                            document.getElementById("emailInput").focus();
+                            return; // ❗Stop auto-submit
+                        } else {
+                            // Hide email field & save "No"
+                            document.getElementById("emailField").classList.add("hide");
+                            answers.email = "No";
 
-                    // ⭐ AUTO-SUBMIT after short delay
+                            setTimeout(() => {
+                                questionForm.dispatchEvent(new Event("submit", { cancelable: true }));
+                            }, 150);
+                            return;
+                        }
+                    }
+
+                    // NORMAL AUTO-SUBMIT for all other radio questions
                     setTimeout(() => {
-                        questionForm.dispatchEvent(new Event("submit", { cancelable: true }));
-                    }, 150); // feel free to tweak delay
+                        if (!isTransitioning) {
+                            questionForm.dispatchEvent(new Event("submit", { cancelable: true }));
+                        }
+                    }, 150);
+
                 });
 
 
@@ -844,27 +946,39 @@
             }
 
             if (round === 1) {
-                if (qIndex === 0) answers.name = value;
-                else answers.org = value;
+                if (qIndex === 0) answers.role = value;
+                else answers.experience = value;
             } else {
-                answers.experience = value;
+                if (qIndex === 0) answers.brought = value;
+                else answers.email = value;
             }
 
             history.push({ qIndex, value });
             qIndex++;
 
             if (qIndex < questions.length) {
-                loadQuestion();
+                animateOut(() => loadQuestion());
             } else {
                 if (round === 1) {
-                    showWinScreen();
+                    animateOut(showWinScreen);
                 } else {
-                    finishedRound2();
+                    animateOut(finishedRound2);
+
                 }
             }
 
         });
-                    
+
+        document.getElementById("emailSubmitBtn").addEventListener("click", () => {
+            const email = document.getElementById("emailInput").value.trim();
+            if (email.length < 3) return;
+
+            answers.email = email;
+
+            // Continue survey
+            questionForm.dispatchEvent(new Event("submit", { cancelable: true }));
+        });
+            
         document.getElementById("backButton").addEventListener("click", () => {
             if (history.length === 0) return; // can't go back
 
@@ -1085,13 +1199,13 @@
             wheel2.style.transform = `rotate(${rotation2}deg)`;
 
             setTimeout(() => {
-const normalized = rotation2 % 360;
-const angle = (360 - normalized + 36) % 360; // 36 = half of 72°
-const segment = Math.floor(angle / 72);      // 72° per slice
-const prizeIndex = segment % 5;              // 0–4
+                const normalized = rotation2 % 360;
+                const angle = (360 - normalized + 36) % 360; // 36 = half of 72°
+                const segment = Math.floor(angle / 72);      // 72° per slice
+                const prizeIndex = segment % 5;              // 0–4
 
-const prizes = ["Beach Ball", "Giant Highlighter", "Calendar", "Stickers", "Magnet"];
-showPrizeModal(prizes[prizeIndex]);
+                const prizes = ["Beach Ball", "Giant Highlighter", "Calendar", "Stickers", "Magnet"];
+                showPrizeModal(prizes[prizeIndex]);
 
 
                 isSpinning2 = false;
@@ -1106,9 +1220,10 @@ showPrizeModal(prizes[prizeIndex]);
             questions = round1Questions;
             qIndex = 0;
 
-            answers.name = "";
-            answers.org = "";
+            answers.role = "";
             answers.experience = "";
+            answers.brought = "";
+            answers.email = "";
 
             // Reset wheel
             rotation2 = 0;
@@ -1129,10 +1244,10 @@ showPrizeModal(prizes[prizeIndex]);
             // Send to host (WebView) if available
             if (window.chrome && window.chrome.webview) {
                 window.chrome.webview.postMessage({
-                    name: answers.name,
-                    org: answers.org,
-                    experience: answers.experience || "",
-                    prize: lastPrize
+                    role: answers.role,
+                    experience: answers.experience,
+                    brought: answers.brought,
+                    email: answers.email
                 });
             }
 
