--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                 0 3rem 3rem rgba(0, 0, 0, 0.3),
                 0 1rem 1rem -0.6rem rgba(0, 0, 0, 0.8);
             margin-top: 30px;
+            z-index: 100;
         }
 
         .button .wrap {
@@ -367,7 +368,7 @@
             font-size: 1.1rem;
             color: #444;
             max-width: 480px;
-            z-index: 10;
+            z-index: 999;
         }
 
         .hide {
@@ -450,37 +451,84 @@
             clip-path: polygon(50% 0%, 15% 100%, 85% 100%);
         }
 
-        .wheel {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: #333;
-            border-radius: 50%;
-            overflow: hidden;
-            box-shadow: 0 0 0 8px #333, 0 0 0 18px #fff, 0 0 0 22px #333;
-            transition: transform 5s cubic-bezier(0.17, 0.67, 0.12, 0.99);
-        }
+.wheel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: transform 5s cubic-bezier(0.17, 0.67, 0.12, 0.99);
 
-        .wheel-segment {
-            position: absolute;
-            width: 50%;
-            height: 50%;
-            transform-origin: bottom right;
-            transform: rotate(calc(45deg * var(--i)));
-            clip-path: polygon(0 0, 60% 0, 100% 100%, 0 60%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
- 
-        .wheel-segment span {
-            position: relative;
-            transform: rotate(45deg);
-            color: #fff;
-            font-size: 2.5em;
-            font-weight: 700;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
+    background: conic-gradient(
+        #d73f09 0deg 72deg,
+        #4A773C 72deg 144deg,
+        #003B5C 144deg 216deg,
+        #f7a162 216deg 288deg,
+        #D3832B 288deg 360deg
+    );
+}
+
+
+.wheel-segment {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0% 0%;
+    transform: rotate(calc(72deg * var(--i))) skewY(-18deg);
+    overflow: hidden;
+}
+
+.wheel-segment::before {
+    content: "";
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    top: -100%;
+    left: -100%;
+    background: inherit;
+    transform: skewY(18deg) rotate(calc(-72deg * var(--i)));
+}
+
+.wheel-segment span {
+    position: absolute;
+    top: -10px;
+    left: 30%;
+    transform: rotate(calc(-72deg * var(--i)));
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: white;
+}
+.wheel-labels {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.wheel-labels span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform-origin: center center;
+
+    transform:
+        rotate(calc(72deg * var(--i) + 36deg))
+        translate(175px)
+        translate(-50%, -50%)
+        rotate(calc(-72deg * var(--i) - 36deg));
+
+    font-size: 1.35rem;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0);
+    white-space: nowrap;
+    pointer-events: none;
+  /*  text-shadow: 2px 2px 4px rgba(0,0,0,0.35);*/
+}
+
 
         /* Modal */
         .modal-backdrop {
@@ -645,25 +693,25 @@
             transform: scale(1.05);
         }
 
-.transition-wrapper {
-    transition: transform 0.35s ease, opacity 0.35s ease;
-    transform-origin: center center;
-}
+        .transition-wrapper {
+            transition: transform 0.35s ease, opacity 0.35s ease;
+            transform-origin: center center;
+        }
 
-.shrink-out {
-    transform: scale(0.85);
-    opacity: 0;
-}
+        .shrink-out {
+            transform: scale(0.85);
+            opacity: 0;
+        }
 
-.grow-in {
-    transform: scale(1);
-    opacity: 1;
-}
+        .grow-in {
+            transform: scale(1);
+            opacity: 1;
+        }
 
-.pre-grow {
-    transform: scale(0.85);
-    opacity: 0;
-}
+        .pre-grow {
+            transform: scale(0.85);
+            opacity: 0;
+        }
 
     </style>
 </head>
@@ -726,15 +774,14 @@
             <div id="spinnerWheel2">
                 <div class="wheel-wrapper">
                     <div class="spin-button" id="spinBtn2">SPIN</div>
-                    <div class="wheel" id="wheelElement2">
-                        <div class="wheel-segment" style="--i:1; background:#d73f09;"><span>1</span></div>
-                        <div class="wheel-segment" style="--i:2; background:#4A773C;"><span>2</span></div>
-                        <div class="wheel-segment" style="--i:3; background:#003B5C;"><span>3</span></div>
-                        <div class="wheel-segment" style="--i:4; background:#f7a162;"><span>4</span></div>
-                        <div class="wheel-segment" style="--i:5; background:#d73f09;"><span>5</span></div>
-                        <div class="wheel-segment" style="--i:6; background:#0D5257;"><span>6</span></div>
-                        <div class="wheel-segment" style="--i:7; background:#D3832B;"><span>7</span></div>
-                        <div class="wheel-segment" style="--i:8; background:#4A773C;"><span>8</span></div>
+                    <div class="wheel" id="wheelElement2">    
+                        <div class="wheel-labels">
+                            <span style="--i:0">Beach Ball</span>
+                            <span style="--i:1">Giant Highlighter</span>
+                            <span style="--i:2">Calendar</span>
+                            <span style="--i:3">Sticker</span>
+                            <span style="--i:4">Magnet</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -747,7 +794,7 @@
         <div class="modal-content">
             <h2>Congratulations!</h2>
             <div class="prize-display" id="prizeValue">1</div>
-            <p>You won <strong id="prizeLabel">1 prize</strong>!</p>
+            <p>You've won a <strong id="prizeLabel">1 prize</strong>!</p>
             <div class="modal-buttons">
                 <button class="modal-btn primary" id="closeModal">Done</button>
             </div>
@@ -826,7 +873,7 @@
                 transitionWrapper.classList.add("pre-grow");
                 requestAnimationFrame(() => {
                     transitionWrapper.classList.remove("pre-grow");
-                    isTransitioning = false;   // 🔥 unlock AFTER next screen renders
+                    isTransitioning = false;   
                 });
             }, 300);
         }
@@ -1182,7 +1229,7 @@
         function showPrizeModal(prize) {
             lastPrize = prize;
             document.getElementById("prizeValue").textContent = prize;
-            document.getElementById("prizeLabel").textContent = `${prize} prize${prize === 1 ? "" : "s"}`;
+            document.getElementById("prizeLabel").textContent = `${prize}`;
             document.getElementById("prizeModal").classList.add("active");
         }
 
@@ -1199,12 +1246,18 @@
             wheel2.style.transform = `rotate(${rotation2}deg)`;
 
             setTimeout(() => {
-                const normalized = rotation2 % 360;
-                const angle = (360 - normalized + 36) % 360; // 36 = half of 72°
-                const segment = Math.floor(angle / 72);      // 72° per slice
-                const prizeIndex = segment % 5;              // 0–4
 
-                const prizes = ["Beach Ball", "Giant Highlighter", "Calendar", "Stickers", "Magnet"];
+            const normalized = (rotation2 + 102) % 360;
+
+
+
+            const angle = (360 - normalized + 36) % 360;
+
+            const segment = Math.floor(angle / 72);
+            const prizeIndex = segment % 5;
+             // 0–4
+
+                const prizes = ["Beach Ball", "Giant Highlighter", "Calendar", "Sticker", "Magnet"];
                 showPrizeModal(prizes[prizeIndex]);
 
 
