--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>Survey – AGU 2025</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap" rel="stylesheet">
 
     <style>
         :root {
@@ -22,6 +19,13 @@
 
         * {
             box-sizing: border-box;
+        }
+
+        @font-face {
+            font-family: "TikTok Sans";
+            src: url("SurveyApp/fonts/TikTokSans.ttf") format("truetype");
+            font-weight: 300 900;
+            font-display: swap;
         }
 
         body {
@@ -233,7 +237,7 @@
         #closeModal{
             height: 50px;
         }
-        
+
         .button {
         cursor: pointer;
         font-weight: 700;
