hover button styling

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         }
 
         .button:hover {
-        background: #c4e201;
+        background: #d73f09;
         }
 
         .button > svg {
