--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         @font-face {
             font-family: "TikTok Sans";
-            src: url("SurveyApp/fonts/TikTokSans.ttf") format("truetype");
+            src: url("SurveyApp/assets/TikTokSans.ttf") format("truetype");
             font-weight: 300 900;
             font-display: swap;
         }
@@ -31,13 +31,14 @@
         body {
             background-color: var(--bg);
             display: flex;
-            justify-content: center;
+            justify-content: stretch;
             align-items: center;
             height: 100vh;
             position: relative;
             margin: 0;
             font-family: "TikTok Sans", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
             overflow: hidden;
+            flex-direction: column;
         }
 
         /* Top left labels */
@@ -69,9 +70,8 @@
 
         .form-container {
             height: 80%;
-            width: 100vh;
-            max-width: 100vh;
-            max-height: 600px;
+            width: 100%;
+            max-width: 100%;
             border-radius: 20px;
             position: relative;
             display: flex;
@@ -81,16 +81,17 @@
 
         .form-inner {
             width: 100%;
-            max-width: 100vh;
+            max-width: 100%;
             text-align: center;
         }
 
         .question-label {
-            font-size: 3rem;
+            font-size: 2rem;
             font-weight: 500;
             color: #222;
-            text-shadow: -5px 5px 7px #00000029;
+            text-shadow: -5px 5px 15px #00000029;
             margin-bottom: 30px;
+            width:60%;
         }
 
         form#questionForm {
@@ -107,17 +108,17 @@
             padding: 0;
         }
 
-        .glow-wrap {
+        .glow-wrap, .glow-wrap:hover {
             display: inline-flex;
             justify-content: center;
             align-items: center;
-            border-radius: 50px;
+            border-radius: 5px;
             padding: 2px;
             background: transparent;
             transition: all 0.3s ease;
         }
 
-        .glow-wrap:focus-within {
+        .glow-wrap:focus-within, .glow-wrap:hover {
             position: relative;
             background: linear-gradient(120deg,
                 #ff8a00,
@@ -152,7 +153,7 @@
             box-shadow: var(--shadow-inset);
         }
 
-        .glow-wrap:focus-within::after {
+        .glow-wrap:focus-within::after, .glow-wrap:hover::after {
             content: "";
             position: absolute;
             inset: -5px;
@@ -173,10 +174,10 @@
         /* Neumorphic radio group */
         .radio-group {
             width: 100%;
-            max-width: 80%;
+            max-width: 100%;
             display: flex;
             flex-direction: row;
-            gap: 12px;
+            gap: 20px;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -185,7 +186,8 @@
             display: flex;
             align-items: center;
             padding: 14px 18px;
-            border-radius: 24px;
+            border-radius: 5px;
+            border: 2px solid #00000017;
             background: #f6f6f6;
             box-shadow: var(--shadow-soft);
             cursor: pointer;
@@ -193,6 +195,13 @@
             text-align: left;
             min-width: 100px;
             justify-content: center;
+            height: 200px;
+            width: 200px;
+            flex-direction: column;
+        }
+
+        .radio-option:hover{
+            border: 0;
         }
 
         .radio-option input[type="radio"] {
@@ -570,11 +579,21 @@
 
         /* Radio Glow */
         .radio-glow {
-            border-radius: 50px;
             padding: 2px;
             transition: all 0.3s ease;
         }
 
+        .radio-glow:hover{
+                        position: relative;
+            background: linear-gradient(120deg,
+                #ff8a00,
+                var(--orange),
+                var(--orange-soft),
+                #ff8a00
+            );
+            background-size: 300% 300%;
+            animation: moveGradient 4s ease infinite;
+        }
         /* Apply glowing animated border when selected */
         .radio-glow.glow-active {
             position: relative;
@@ -678,13 +697,31 @@
             justify-content: space-between;
             gap: 20px;
         }
+
+        .radio-icon{
+            width: 100px;
+            flex-basis: 100%;
+            max-height: 100px;
+            object-fit: contain;
+        }
+
+        .top-nav{
+            width: 100%;
+            height:100px;
+            background-color: #d73f09;
+            display: inline-flex;
+            align-items: center;
+        }
+
+        .top-nav img{    
+            height: 80px;
+            max-height: 80px;
+            padding-left: 20px;
+        }
     </style>
 </head>
 <body>
-
-    <h1>AGU 2025</h1>
-    <h2 class="main-title">Oregon State<br>University</h2>
-
+    <div class="top-nav"><img src="surveyapp/assets/logo.png"></div>
     <!-- Confetti -->
     <canvas id="confettiCanvas"></canvas>
 
@@ -892,6 +929,7 @@
                     <div class="glow-wrap radio-glow">
                         <div class="radio-option">
                             <span class="radio-bullet"></span>
+                            <img class="radio-icon" src="surveyapp/assets/${opt.toLowerCase().replace(/ /g,'-')}.png" alt="${opt} icon">
                             <span class="radio-label-text">${opt}</span>
                             <input type="radio" name="round2" value="${opt}" id="${id}">
                         </div>
@@ -1130,14 +1168,16 @@
             }
 
             const colors = ["#d73f09", "#ff8a00", "#f7a162", "#4A773C", "#003B5C"];
-            const total = 120;
+            const total = 550;
 
             for (let i = 0; i < total; i++) {
                 // VERY wide cone for chaotic look
-                const angle = (-90 + (Math.random() * 140 - 70)) * Math.PI / 180;
+                // 360° confetti spread — full explosion
+                const angle = Math.random() * Math.PI * 2;
+
 
                 // More variation in speed
-                const speed = 2 + Math.random() * 4;
+                const speed = 2 + Math.random() * 60;
 
                 // New randomness properties
                 const wobble = Math.random() * Math.PI * 2;
@@ -1150,7 +1190,7 @@
                     y: originY,
                     vx: Math.cos(angle) * speed,
                     vy: Math.sin(angle) * speed,
-                    size: 4 + Math.random() * 5,
+                    size: 4 + Math.random() * 10,
                     color: colors[Math.floor(Math.random() * colors.length)],
                     rotation: Math.random() * Math.PI * 2,
                     rotationSpeed: (Math.random() - 0.5) * 0.25,
@@ -1162,7 +1202,7 @@
                     drag,
 
                     life: 0,
-                    maxLife: 100 + Math.random() * 60
+                    maxLife: 200 + Math.random() * 60
                 });
             }
         }
@@ -1216,7 +1256,7 @@
             });
 
             confettiPieces = confettiPieces.filter(p =>
-                p.y < confettiCanvas.height + 200 && p.life < p.maxLife
+                p.y < confettiCanvas.height + 200
             );
 
             confettiPieces.forEach(p => {
@@ -1246,6 +1286,13 @@
             document.getElementById("prizeValue").textContent = prize;
             document.getElementById("prizeLabel").textContent = `${prize}`;
             document.getElementById("prizeModal").classList.add("active");
+
+            // burst from wheel center
+            const wheelRect = wheel2.getBoundingClientRect();
+            startConfetti(
+                wheelRect.left + wheelRect.width / 2,
+                wheelRect.top + wheelRect.height / 2
+            );
         }
 
         spinBtn2.addEventListener("click", () => {
